--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
